[project]
name = "book-keeping"
version = "0.1.1"
description = "Book-keeping: builds/updates an Excel register from a Chase checking statement PDF."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Ting Wang" }]
dependencies = ["openpyxl>=3.1.2","PyPDF2>=3.0.0","pdfplumber>=0.11.0"]

[project.scripts]
book-keeping = "book_keeping.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
